--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "traceur": "~0.0.30",
-    "es6-shim": "~0.9.2"
+    "es6-shim": "~0.9.2",
+    "diary": "0.0.2"
   },
   "devDependencies": {
     "pipe": "angular/pipe",
